# EMBER

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ember/: __init__.py  cli.py  datasets.py  download.py  reporting.py  spectrograms.py
ember/anomaly/: __init__.py  classical.py  detectors.py  embeddings.py  ensemble.py  evaluation.py  features.py  neural.py  patchcore.py  pipeline.py  plotting.py
scripts/: create_spectrograms_dvac.py  create_spectrograms_vac.py  download_data.py
tests/: test_anomaly_embeddings.py  test_anomaly_evaluation.py  test_anomaly_features.py  test_anomaly_neural.py  test_download_data.py  test_spectrograms.py
